karnc/tests/fixtures/negative/173_mixed_inrange_bounds/input.karn
commons bad {
  type Odd = Float where InRange(0, 1.0)
}
